--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,11 @@
     "require": {
         "php": ">=5.6.4",
         "caouecs/laravel-lang": "~3.0",
+        "guzzlehttp/guzzle": "^6.2",
         "laracasts/flash": "^2.0",
         "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "naux/sendcloud": "^1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
