--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laracasts/flash": "^2.0",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "naux/sendcloud": "^1.1"
+        "naux/sendcloud": "^1.1",
+        "predis/predis": "^1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
