--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "naux/sendcloud": "^1.1",
+        "overtrue/laravel-wechat": "~3.0",
+        "overtrue/wechat": "~3.1",
         "predis/predis": "^1.1"
     },
     "require-dev": {
